--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 streamlit
-langchain>=0.1.0
-langchain-community>=0.0.10
-langchain-google-genai
-langchain-chroma
-langchain-huggingface
+langchain==0.3.27
+langchain-community==0.3.31
+langchain-google-genai==2.0.10
+langchain-chroma==0.2.6
+langchain-huggingface==0.3.1
 sentence-transformers
-chromadb
+chromadb==1.3.5
 python-dotenv
 tiktoken
 pypdf
